--- a/package.json
+++ b/package.json
@@ -47,17 +47,21 @@
 		"gulp-imagemin": "^3.3.0",
 		"gulp-inject-string": "^1.1.0",
 		"gulp-install": "^1.1.0",
+		"gulp-jsdoc3": "^1.0.1",
 		"gulp-json-editor": "^2.2.1",
 		"gulp-less": "^3.3.2",
 		"gulp-load-plugins": "^1.5.0",
 		"gulp-uglify": "^3.0.0",
 		"gulp-util": "^3.0.8",
+		"jsdoc": "^3.5.2",
 		"less-plugin-autoprefix": "^1.5.1",
 		"less-plugin-clean-css": "^1.5.1",
+		"minami": "^1.2.3",
 		"run-sequence": "^1.2.2"
 	},
 	"dependencies": {
 		"alertify.js": "^1.0.12",
+		"bson-objectid": "^1.1.5",
 		"electron-debug": "^1.1.0",
 		"electron-store": "^1.1.0",
 		"font-awesome": "^4.7.0",
